--- a/src/sass/angular-colorpicker.scss
+++ b/src/sass/angular-colorpicker.scss
@@ -6,8 +6,7 @@
     font-weight: normal;
     border: 2px solid #fff;
     border-radius: 50%;
-    background-image: linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd), linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd);
-    background-position: 0 0, 4px 4px;
+    background: linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd), linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd) 0 0, 4px 4px;
     background-size: 8px 8px;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .14), 0 2px 2px 0 rgba(0, 0, 0, .098), 0 1px 5px 0 rgba(0, 0, 0, .084);
     vertical-align: middle;
@@ -35,7 +34,7 @@
     border-radius: 4px;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .14), 0 2px 2px 0 rgba(0, 0, 0, .098), 0 1px 5px 0 rgba(0, 0, 0, .084);
     transition: all 0.2s;
-    font-family: "Helvetica Neue", "Microsoft Yahei", "SimHei";
+    font-family: "Source Sans Pro", "Helvetica Neue", "Microsoft Yahei", "SimHei", sans-serif;
     &.alpha {
         .tab-slider {
             .colorpicker-alpha {
@@ -43,139 +42,135 @@
             }
         }
     }
-    &.position-top{
-        animation:ani-colorpicker-left 0.2s;
+    &.position-top {
+        animation: ani-colorpicker-left 0.2s;
         .colorpicker-caret {
             position: absolute;
             bottom: 26px;
             right: -8px;
-            border-color:#fff;
+            border-color: #fff;
             &::before {
                 position: absolute;
                 top: 0;
                 right: -1px;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-left: 8px solid rgba(0,0,0,0.15);
+                border-left: 8px solid rgba(0, 0, 0, 0.15);
             }
             &::after {
                 position: absolute;
                 top: 0;
                 right: 0;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-left: 8px solid transparent;
-                border-left-color: inherit;
+                border-left: 8px solid inherit;
             }
         }
     }
-    &.position-left{
-        animation:ani-colorpicker-left 0.2s;
+    &.position-left {
+        animation: ani-colorpicker-left 0.2s;
         .colorpicker-caret {
             position: absolute;
             top: 11px;
             right: -8px;
-            border-color:#fff;
+            border-color: #fff;
             &::before {
                 position: absolute;
                 top: 0;
                 right: -1px;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-left: 8px solid rgba(0,0,0,0.15);
+                border-left: 8px solid rgba(0, 0, 0, 0.15);
             }
             &::after {
                 position: absolute;
                 top: 0;
                 right: 0;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-left: 8px solid transparent;
-                border-left-color: inherit;
+                border-left: 8px solid inherit;
             }
         }
     }
-    &.position-bottom{
-        animation:ani-colorpicker-right 0.2s;
+    &.position-bottom {
+        animation: ani-colorpicker-right 0.2s;
         .colorpicker-caret {
             position: absolute;
             bottom: 26px;
             left: -7px;
-            border-color:#fff;
+            border-color: #fff;
             &::before {
                 position: absolute;
                 top: 0;
                 left: -1px;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-right: 8px solid rgba(0,0,0,0.2);
+                border-right: 8px solid rgba(0, 0, 0, 0.2);
             }
             &::after {
                 position: absolute;
                 top: 0;
                 left: 0;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
+                border-right: 8px solid inherit;
                 border-bottom: 8px solid transparent;
-                border-right: 8px solid transparent;
-                border-right-color: inherit;
             }
         }
     }
     &.position-right {
-        animation:ani-colorpicker-right 0.2s;
+        animation: ani-colorpicker-right 0.2s;
         .colorpicker-caret {
             position: absolute;
             top: 11px;
             left: -7px;
-            border-color:#fff;
+            border-color: #fff;
             &::before {
                 position: absolute;
                 top: 0;
                 left: -1px;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
                 border-bottom: 8px solid transparent;
-                border-right: 8px solid rgba(0,0,0,0.15);
+                border-right: 8px solid rgba(0, 0, 0, 0.15);
             }
             &::after {
                 position: absolute;
                 top: 0;
                 left: 0;
-                content:"";
+                content: "";
                 display: inline-block;
                 width: 0;
                 height: 0;
                 border-top: 8px solid transparent;
+                border-right: 8px solid inherit;
                 border-bottom: 8px solid transparent;
-                border-right: 8px solid transparent;
-                border-right-color: inherit;
             }
         }
     }
@@ -186,11 +181,8 @@
         width: 255px;
         height: 70px;
         border-radius: 4px 4px 0 0;
-        background-image: linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd), linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd);
-        background-position: 0 100%;
-        background-position: 0 0, 4px 4px;
         background-size: 8px 8px;
-        background-color: #fff;
+        background: #fff linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd), linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd) 0 0, 4px 4px;
         .inner {
             position: relative;
             display: block;
@@ -345,8 +337,8 @@
             width: 28px;
             height: 28px;
             margin: 1px;
-            background-image: linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd), linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd);
-            background-position: 0 0, 4px 4px;
+            background: linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd),
+            linear-gradient(45deg, #ddd 25%, transparent 25%, transparent 75%, #ddd 75%, #ddd) 0 0, 4px 4px;
             background-size: 8px 8px;
         }
         .color-unit {
@@ -425,23 +417,24 @@
     }
 }
 
-@keyframes ani-colorpicker-right{
-    0%{
-        transform: translate(-5px,0);
+@keyframes ani-colorpicker-right {
+    0% {
+        transform: translate(-5px, 0);
         opacity: 0;
     }
-    100%{
-        transform: translate(0,0);
+    100% {
+        transform: translate(0, 0);
         opacity: 1;
     }
 }
-@keyframes ani-colorpicker-left{
-    0%{
-        transform: translate(5px,0);
+
+@keyframes ani-colorpicker-left {
+    0% {
+        transform: translate(5px, 0);
         opacity: 0;
     }
-    100%{
-        transform: translate(0,0);
+    100% {
+        transform: translate(0, 0);
         opacity: 1;
     }
 }
